<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">Cadastro Caelum</string>
    <!-- ********************************************************************** -->
    <string name="title_activity_lista_alunos">Relação de alunos</string>
    <string name="txt_novo">Novo</string>
    <!-- ********************************************************************** -->
    <string name="title_activity_form_aluno">Novo aluno</string>
    <string name="txt_foto">Foto do aluno</string>
    <string name="txt_nome">Nome</string>
    <string name="form_aluno_edtNome_hint">Preencha o nome</string>
    <string name="txt_endereco">Endereço</string>
    <string name="form_aluno_edtEndereco_hint">Preencha o endereço</string>
    <string name="txt_telefone">Telefone</string>
    <string name="form_aluno_edtTelefone_hint">Preencha o telefone</string>
    <string name="txt_website">Website</string>
    <string name="form_aluno_edtWebsite_hint">Preencha o site</string>
    <string name="txt_mediaFinal">Média final</string>
    <string name="txt_salvar">Salvar</string>
    <string name="txt_atualizar">Atualizar</string>
    <!-- ********************************************************************** -->
    <string name="ctx_ligar">Ligar</string>
    <string name="ctx_enviar_sms">Enviar SMS</string>
    <string name="ctx_mostrar_no_mapa">Mostrar no mapa</string>
    <string name="ctx_acessar_website">Acessar website</string>
	<string name="ctx_enviar_email">Enviar e-mail</string>
    <string name="ctx_deletar">Deletar&#x2026;</string>
    <string name="quer_mesmo_deletar">Quer mesmo deletar?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

</resources>
