<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <ImageView
        android:id="@+id/form_aluno_imgFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/txt_foto"
        android:src="@drawable/ic_noimage" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nome" />

    <EditText
        android:id="@+id/form_aluno_edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_aluno_edtNome_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_endereco" />

    <EditText
        android:id="@+id/form_aluno_edtEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_aluno_edtEndereco_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_telefone" />

    <EditText
        android:id="@+id/form_aluno_edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_aluno_edtTelefone_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_telefone" />

    <EditText
        android:id="@+id/form_aluno_edtWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_aluno_edtWebsite_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_mediaFinal" />

    <RatingBar
        android:id="@+id/form_aluno_ratMediaFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5" />

    <Button
        android:id="@+id/form_aluno_btnSalvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_salvar" />

</LinearLayout>